Support Java 8 (#3)
* :book: improve doc

* :book: fix configuration example

* :book: improve typo

* :book: improve doc

* :book: add best practice

* :arrow_down: support java 8